<resources>
    <string name="app_name">Soccer Events</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Soccer Events</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Soccer Events now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="facebook_app_id">1150276381681321</string>
    <string name="basic_line">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fbloginText">Facebook</string>
    <string name="googleloginText">Google+</string>
    <string name="username">Username</string>
    <string name="change_photo">Change photo</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_while_loading_data_please_check_your_network_connection">Error while loading data! Please check your network connection!</string>
    <string name="try_again">Try again</string>
    <string name="nd_home">Home</string>
    <string name="nd_sub_rates">Rates</string>
    <string name="nd_all_users">All users</string>
    <string name="nd_my_rates">My rates</string>
    <string name="nd_sub_option">Options</string>
    <string name="nd_settings">Settings</string>
    <string name="nd_exit">Exit</string>
    <string name="settings_username_title">Username</string>
    <string name="settings_information">Information</string>
    <string name="settings_username">Username</string>
    <string name="settings_email_title">anonymous@hackers.com</string>
    <string name="settings_email">Email</string>
    <string name="settings_change_password">Change password</string>
    <string name="settings_settings">Settings</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_change">English</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_change">Default</string>
    <string name="settings_support">Support</string>
    <string name="settings_faq">FAQ</string>
    <string name="user_photo_url">https://chapters.theiia.org/northwest-ohio/About/ChapterOfficers/Larounis,%20John.png</string>
    <string name="user_list_row_pos">pos</string>
    <string name="user_list_row_name">name</string>
    <string name="user_list_row_points">points</string>
    <string name="user_list_row_text_points">Points:</string>
    <string name="user_rate_list_row_rated_home_team">rated_home_team</string>
    <string name="user_rate_list_row_rated_away_team">rated_away_team</string>
    <string name="user_rate_list_row_ratedtype">ratedType</string>
    <string name="user_rate_list_row_ratedpoints">ratedPoints</string>
    <string name="league_table_row_nameteam">nameteam</string>
    <string name="league_table_row_pos">Pos</string>
    <string name="league_table_row_p">P</string>
    <string name="league_table_row_games">Games</string>
    <string name="league_table_row_g">G</string>
    <string name="league_table_row_gd">GD</string>
    <string name="league_table_row_d">D</string>
    <string name="league_table_row_pts">Pts</string>
    <string name="league_table_row_pt">Pt</string>
    <string name="match_list_row_hometeam">homeTeam</string>
    <string name="match_list_row_awayteam">awayTeam</string>
    <string name="match_list_row_time">time</string>
    <string name="match_list_row_status">status</string>
    <string name="league_list_row_name_league">Name league</string>
    <string name="league_list_row_teams_of_league">Teams of league:</string>
    <string name="league_list_row_number">number</string>
    <string name="league_list_row_short_league">short league</string>
    <string name="league_list_row_year">year</string>
    <string name="home_team_player_row_name">Name</string>
    <string name="home_team_player_row_birthday">Birthday:</string>
    <string name="home_team_player_row_number">number</string>
    <string name="home_team_player_row_year">year</string>
    <string name="home_team_player_row_nationality">Nationality:</string>
    <string name="home_team_player_row_position">position</string>
    <string name="fragment_rate_round">round</string>
    <string name="fragment_rate_status">status</string>
    <string name="fragment_rate_home_team">home team</string>
    <string name="fragment_rate_away_team">away team</string>
    <string name="fragment_rate_win">win</string>
    <string name="fragment_rate_draw">draw</string>
    <string name="fragment_rate_lose">lose</string>
    <string name="dialog_rate_amount_of_winnings">Amount of winnings =</string>
    <string name="dialog_rate_0">0</string>
    <string name="dialog_rate_type">Type:</string>
    <string name="dialog_rate_null">null</string>
    <string name="dialog_photo_photo">Photo</string>
    <string name="dialog_photo_load_from_gallery">Load from gallery</string>
    <string name="dialog_photo_take_photo">Take photo</string>
    <string name="activity_splash_soccer_events">SOCCER EVENTS</string>
    <string name="activity_splash_the_art_of_shitcoding">The Art Of ShitCoding</string>
    <string name="activity_splash_simplevision_studio">© Simplevision Studio</string>
    <string name="no_connected_to_internet">Not connected to internet</string>
    <string name="connected_to_internet">Connected to internet</string>
    <string name="anonymous">Anonymous</string>
    <string name="anonymous_email">anonymous@hacker.com</string>
    <string name="enter_your_registered_email_id">Enter your registered email id</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="edit_name">Edit name</string>
    <string name="wait_while_loading_photo"> Wait, while loading photo!</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="edit_email">Edit email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="edit_password">Edit password</string>
    <string name="enter_email_address">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_too_short">Password too short, enter minimum 6 characters!</string>
    <string name="sing_up">Sing up</string>
    <string name="loading">Loading</string>
    <string name="roundof">Round of </string>
    <string name="none"> </string>
    <string name="we_have_sent">We have sent you instructions to reset your password!</string>
    <string name="failed_to_send">Failed to send reset email!</string>
    <string name="enter_points">Enter points...</string>
    <string name="set_rate">Set rate</string>
    <string name="points">Points...</string>
     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, mauris suscipit eros curabitur vel,
        purus ullamcorper quam dignissim ligula vitae, tellus pharetra, urna arcu nunc ut sem
        duis fermentum. Consequat gravida molestie vulputate libero cras, eleifend magna ut,
        in condimentum, nulla consectetuer. Leo consectetuer velit in turpis, nisl sed nec potenti,
        nec in ullamcorper vel quis, in nunc tortor eleifend. Velit elementum nulla nec, sit elit,
        etiam lectus vivamus metus magna felis nonummy, dictum porttitor et urna in architecto semper,
        in mattis. Porta sed nisl. Sapien lorem porta donec scelerisque, turpis dolor libero rhoncus
        sit, vestibulum tortor dictum placerat erat parturient dapibus.Eleifend sit lacus praesent,
        feugiat interdum sodales ac quia. Laoreet sapien iaculis eu, eleifend morbi felis.
        Ultrices sapien diam, maecenas neque consectetuer cursus diam, hendrerit mi nulla quibusdam,
        in nisl. Sodales rhoncus posuere dui duis felis, turpis sit molestie at molestie non. Sodales
        elementum blandit ultricies, a sagittis, vehicula condimentum donec, imperdiet quisque est facilisis
        neque, vivamus lacus. Libero aliquam curabitur velit, nulla semper dignissim, justo pulvinar vivamus
        in morbi suscipit. Elit ligula nec dui accumsan dignissim, curabitur sed consequat, at donec, morbi
        purus ac sodales mauris vestibulum, a pharetra elit donec aliquam. Quisque mus quis, etiam ullamcorper
        nec. Nullam porttitor enim egestas, ullamcorper dui proin erat felis lorem, non enim et. In amet mollis.
        Proin consequat a tellus lectus pede, ante etiam elit pede amet, eu neque pede ut suspendisse.Dapibus nunc.
        Semper pulvinar nunc laoreet ac, proin tristique dolor sed eos, nibh euismod eros sit vestibulum
        dictum, cum mauris eget enim. Hendrerit ultricies, tempor mattis. Ut sed dictum eget, mauris vel interdum
        enim eros, tempor dolor, quam odit justo nec nulla fringilla eget. Leo ipsum, ultricies eleifend habitant
        massa potenti doloribus, vitae dapibus, donec mus convallis. Eu senectus, praesent mi vitae odio est.
        Saepe sed ornare.Tincidunt eget auctor mauris donec in odio, donec at turpis, sed sapien velit nunc,
        mauris et vivamus maecenas integer mi. Tempor wisi praesent convallis quisque, iaculis quam aliquam id.
        Quam ut purus vestibulum eros eget vitae, eget vehicula ipsum eu id volutpat sed. Quisque bibendum pellentesque.
        Quisque at nam non lacinia, risus non, malesuada ante arcu tincidunt. Eget eget lacus vel. At lacus at vestibulum,
        diam quis libero eu vivamus, elit lectus aliquam maecenas egestas mattis lacus, scelerisque mi, mi fringilla diam
        vitae curabitur velit ullamcorper. Sed luctus amet pretium, sodales vivamus, magna nonummy, inceptos duis feugiat
        diam magna lectus. Ultricies et, in nibh et orci ac donec nunc.</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Ukraine</item>
    </string-array>
    <string name="english">English</string>
    <string name="ukraine">Ukraine</string>
    <string name="language">Language</string>
</resources>