<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:paddingBottom="15dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="15dp">

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/league_list_row_name_league"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/teamsofleague"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/league_list_row_teams_of_league"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/numberOfTeams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/teamsofleague"
        android:layout_toRightOf="@+id/teamsofleague"
        android:text="@string/league_list_row_number"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/league"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/caption"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/league_list_row_short_league" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/league_list_row_year" />
</RelativeLayout>