<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="1"
    tools:context=".Fragments.SettingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageViewPhoto"
            android:layout_toRightOf="@+id/imageViewPhoto"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextHint">

                <EditText
                    android:id="@+id/username_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/username"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextHint">

                <EditText
                    android:id="@+id/email_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imageViewPhoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:padding="5dp"
                android:paddingRight="10dp"
                app:civ_border="false"
                app:civ_shadow="true"
                app:civ_shadow_color="#999999"
                app:civ_shadow_radius="25" />
    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:id="@+id/buttonChangePassword"
        android:textColor="@android:color/white"
        android:theme="@style/MaterialButton"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:theme="@style/MaterialButton" />

</LinearLayout>
